fix wrapped

--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,6 @@ body {
 }
 
 .container {
-    height: 42rem;
     width: 25rem;
     background-color: black;
     color: white;
@@ -75,6 +74,7 @@ button {
     font-size: 2.5rem;
     margin-top: .5rem;
     margin-bottom: .5rem;
+    text-align: center;
 }
 
 .temperature {
